fix:alignment_bg_color

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  font-variation-settings:"wdth" 100;
 }
 
